# chess_opening_explorer

./: .gitignore  README.md  pyproject.toml
src/lichess_opening_analyzer/: analysis.py  cli.py  explorer.py  lichess.py  models.py  pgn.py  report.py
tests/: test_analysis.py  test_explorer.py  test_lichess.py  test_pgn.py
