[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lichess-opening-analyzer"
version = "0.1.0"
description = "Find repeated opening moves that underperform common Lichess Explorer alternatives."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "python-chess>=1.999",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
lichess-opening-analyzer = "lichess_opening_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
